--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "connect": "^3.4.0",
     "express": "^4.13.3",
     "md5": "^2.0.0",
     "mongoose": "^4.2.7",
