--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "body-parser": "^1.14.1",
     "connect": "^3.4.0",
     "express": "^4.13.3",
+    "express-vhost": "^0.2.0",
     "md5": "^2.0.0",
     "mongoose": "^4.2.7",
-    "swig": "^1.4.2"
+    "subdomain": "^1.2.0",
+    "swig": "^1.4.2",
+    "vhost": "^3.0.2"
   }
 }
