--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.14.1",
     "connect": "^3.4.0",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "express-vhost": "^0.2.0",
     "md5": "^2.0.0",
     "mongoose": "^4.2.7",
